# crumusix

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: windows.yaml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: performance.rs
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  config.rs  diagnostics.rs  lib.rs  stats.rs
src-tauri/src/cache/: artwork.rs  db.rs  metadata.rs  migrations.rs  mod.rs  storage.rs
src-tauri/src/events/: mod.rs
src-tauri/src/local/: mod.rs
src-tauri/src/lyrics/: cache.rs  lrclib.rs  manager.rs  mod.rs  models.rs  parser.rs  provider.rs
src-tauri/src/playback/: device.rs  manager.rs  mixer.rs  mod.rs  provider.rs  state.rs  video_provider.rs
src-tauri/src/queue/: mod.rs
src-tauri/src/recovery/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/spotify/: api.rs  auth.rs  commands.rs  events.rs  mod.rs  session.rs  state.rs  worker.rs
src/assets/fonts/: google-fonts.css
